# notification-service

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  main.py  manage.py  pyproject.toml
apps/nchannels/: apps.py  channel_repository.py  channel_serializer.py  channel_service.py  container.py  permissions.py  urls.py  views.py
apps/nchannels/migrations/: 0001_initial.py
apps/nchannels/models/: __init__.py  notification_channel.py
apps/nchannels/swagger/: schemas.py
apps/notifications/: apps.py  container.py  repositories.py  serializer.py  services.py  tasks.py  throttles.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/notifications/models/: __init__.py  notification.py
apps/notifications/senders/: base.py  email.py  in_app.py  sms.py
apps/notifications/serializers/: bulk_notification.py  notification.py
apps/notifications/swagger/: schemas.py
apps/notifications/tests/: test_services.py
apps/notifications/views/: bulk_notification.py  notification.py
apps/ntemplates/: apps.py  container.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/ntemplates/migrations/: 0001_initial.py
apps/ntemplates/models/: __init__.py  notification_template.py
apps/ntemplates/swagger/: schemas.py
apps/templates/: apps.py
apps/users/: apps.py  container.py  throttles.py  urls.py
apps/users/migrations/: 0001_initial.py  0002_preference.py
apps/users/models/: __init__.py  user_preference.py  users.py
apps/users/repositories/: register.py  user_preferences.py
apps/users/serializers/: register.py  user_preference.py
apps/users/services/: register.py  user_preference.py
apps/users/swagger/: schemas.py
apps/users/tests/: test_models.py  test_repo.py
apps/users/views/: __init__.py  login.py  register.py  user_preference.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
docker/: docker-compose.yml
