[project]
name = "notification-service"
version = "0.1.0"
description = "Notification Service — a centralized backend service for sending Email, SMS, and In-App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-celery-results>=2.6.0",
    "django-redis>=7.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sendgrid>=6.12.5",
    "twilio>=9.10.9",
]

[tool.black]
line_length = 90
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "W", "ANN", "RUF"]
ignore = ["D100", "D101", "RUF001"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F403", "F405"]
"apps/**/migrations/*.py" = ["RUF012", "E501", "ANN201", "ANN001"]
"apps/**/views/*.py" = ["RUF012"]
"apps/**/views.py" = ["RUF012"]
"apps/**/tests/*.py" = ["ANN201", "ANN001"]


[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

ignore_missing_imports = false
follow_imports = "normal"

disable_error_code = ["untyped-decorator", "import-untyped"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"
strict_settings = true
strict_model_abstract_attrs = true
[[tool.mypy.overrides]]
module = [
    "drf_spectacular",
    "drf_spectacular.*",
    "environ",
    "rest_framework.serializers",
    "jwt",
    "jwt.*",
]
ignore_errors = false



[dependency-groups]
dev = [
    "black>=25.12.0",
    "deptry>=0.25.1",
    "django-stubs>=5.2.8",
    "djangorestframework-stubs>=3.16.7",
    "factory-boy>=3.3.3",
    "mypy>=1.19.1",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
    "types-requests>=2.32.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "*_test.py"]

[tool.deptry]
per_rule_ignores = { DEP002 = ["colorlog", "django-celery-results", "sendgrid", "django-redis", "twilio", "django-anymail", "django-filter", "django-stubs", "djangorestframework-simplejwt", "gunicorn", "psycopg2-binary", "cryptography", "whitenoise", "redis", "logtail-python"], DEP004 = ["pytest", "pytest_mock"] }